--- a/packages/roomkit-react/package.json
+++ b/packages/roomkit-react/package.json
@@ -10,7 +10,7 @@
     "prebuilt",
     "roomkit"
   ],
-  "version": "0.3.29",
+  "version": "0.3.30-0",
   "author": "100ms",
   "license": "MIT",
   "repository": {
