--- a/examples/prebuilt-react-integration/package.json
+++ b/examples/prebuilt-react-integration/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@100mslive/roomkit-react": "0.3.29",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@100mslive/react-icons": "0.10.29"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
